# bp_investment_screening

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/: bp_claim_extraction.md  investment_screening.md  layer1_research.md  technical_background_outline.md
skills/: company_basic_info.md  industry_research.md  investment_screening.md
src/bp_investment_screening/: __init__.py  __main__.py  bp_parser.py  claim_extractor.py  config.py  evidence_normalizer.py  formal_docx.py  http.py  layer1.py  layer1_synthesizer.py  layer2.py  llm.py  pipeline.py  report_composer.py  report_writer.py  schemas.py  search.py  technical_background.py  tracing.py
templates/: README.md  final_research_memo_format.md
tests/: test_contracts.py
